trying to fix viewport issue on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,10 @@ body {
   background-image: url('../dist/cork.jpg');
   background-repeat: repeat;
 }
+#spa {
+  height: 100vh;
+  display: flex;
+}
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -11,15 +15,15 @@ body {
   min-height: 150px;
 }
 .row-limits {
-  height: 25vh;
-  max-height: 150px;
+  /*height: 25vh;
+  max-height: 150px;*/
 }
 .tile {
   flex: 1;
   min-width: 150px;
   align-self: stretch;
 }
-.polaroids > div {
+/*.polaroids > div {
   margin: 10px;
   flex: 1;
   min-width: 150px;
@@ -50,7 +54,7 @@ body {
 .polaroids div > img {
   -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5);
   -moz-box-shadow: 0 3px 6px rgba(0,0,0,.5);
-}
+}*/
 .selected > img{
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
